B-F Sandbox Full-Backup/src/objects/Visit_Report_Configuration__c.object
<CustomObject>
    <description>Test Object to show a possible way to report over visits</description>
    <fields>
        <fullName>All_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Default: Only the Last Visit per Account per Period is selected!</inlineHelpText>
        <label>All Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <inlineHelpText>With &quot;On&quot; only the &quot;Group&quot; Picklist will be taken into account. With &quot;Off&quot; only the Outlet Class will be used. With &quot;Both&quot; you can choose both of them.
&quot;Wholeseller&quot; will only select Visits of &quot;Wholeseller&quot; Accounts ignoring Group and Class.</inlineHelpText>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Convenience Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duty Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyper Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquor Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Wholesalers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesalers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar / Pub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disco / Hip Hop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel / Resort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karaoke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Night Club / Salon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant / Cafe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports / Darts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slow Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Food / Bistro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dance Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room Salon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Chain</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IsRecurrence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurrence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastRecalculation__c</fullName>
        <label>LastRecalculation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Visit Report Configurations</relationshipLabel>
        <relationshipName>Visit_Report_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outlet_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Class</label>
        <referenceTo>Outlet_Class__c</referenceTo>
        <relationshipLabel>Visit Report Configurations</relationshipLabel>
        <relationshipName>Visit_Report_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period1_From__c</fullName>
        <label>Period1_From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period1_To__c</fullName>
        <label>Period1 To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period2_From__c</fullName>
        <label>Period2_From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period2_To__c</fullName>
        <label>Period2_To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recurrence_Int__c</fullName>
        <label>Recurrence Interval</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Selection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurrence_Number__c</fullName>
        <inlineHelpText>Number for free recurrence interval</inlineHelpText>
        <label>Recurrence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurrence_Unit__c</fullName>
        <inlineHelpText>Unit of Recurrence</inlineHelpText>
        <label>Recurrence Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Day(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year(s)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Visit Report Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Visit_Report_Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Report Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RecurrenceFreeSelection</fullName>
        <active>true</active>
        <description>If free selection is set, this rule forces input of number and period</description>
        <errorConditionFormula>AND( 
 ISPICKVAL(Recurrence_Int__c,&quot;Free Selection&quot;),
OR(
ISNULL( Recurrence_Number__c ),
ISBLANK(TEXT( Recurrence_Unit__c) )
)
)</errorConditionFormula>
        <errorDisplayField>Recurrence_Number__c</errorDisplayField>
        <errorMessage>With free selection you have to give number and unit!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RecurrenceIntervalHasToBeSet</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 IsRecurrence__c ,
ISBLANK(TEXT( Recurrence_Int__c ))
)</errorConditionFormula>
        <errorMessage>If recurrence is selected you have to choose an interval!</errorMessage>
    </validationRules>
</CustomObject>